new-farmer2.css
* {
    box-sizing: border-box;
    margin: 0;
  }
  
  body {
    font-family: 'Montserrat', normal;
    background-color: #99B898;
  }

  .text {
    position: absolute;
    width: 1155px;
    height: 88px;
    left: 142px;
    top: 82px;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 72px;
    line-height: 88px;
    /* identical to box height */
    
    text-align: center;
    letter-spacing: 0.06em;
    
    color: #FECEAB;
  }

  .solid {
    position: absolute;
    width: 1147.5px;
    height: 0px;
    left: 144.5px;
    top: 180px;
    
    border: 10px solid #FECEAB;
  }

  .text1 {
    position: absolute;
    left: 7.5%;
    right: 61.98%;
    top: 28.5%;
    bottom: 66.42%;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 44px;
    text-align: center;
    letter-spacing: 0.06em;
    
    color: #2A363B;
  }

  .product-label {
    position: absolute;
    left: 12.11%;
    right: 83.01%;
    top: 36.87%;
    bottom: 61.28%;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    letter-spacing: 0.06em;
    
    color: #2A363B;
  }

  .units-label {
    position: absolute;
    left: 52.23%;
    right: 46.22%;
    top: 36.87%;
    bottom: 61.28%;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    letter-spacing: 0.06em;
    
    color: #2A363B;
  }

  .quantity-label {
    position: absolute;
    left: 12.11%;
    right: 82.65%;
    top: 46.12%;
    bottom: 40.03%;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    letter-spacing: 0.06em;
    
    color: #2A363B;
    
  }

  .price-label {
    position: absolute;
    left: 52.23%;
    right: 38%;
    top: 46.12%;
    bottom: 40.03%;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    text-align: center;
    letter-spacing: 0.06em;
    
    color: #2A363B;
  }

  .product-input {
    position: absolute;
    height: 33px;
    width: 400px;
    
    background: #FFFFFF;
    border: 5px solid #2A363B;
    box-sizing: border-box;
  }

  .units-input {
    position: absolute;
    height: 33px;
    width: 400px;

    background: #FFFFFF;
    border: 5px solid #2A363B;
    box-sizing: border-box;
  }

  .quantity-input {
    position: absolute;
    height: 33px;
    width: 400px;
    
    background: #FFFFFF;
    border: 5px solid #2A363B;
    box-sizing: border-box;
  }

  .price-input {
    position: absolute;
    left: 0%;
    height: 33px;
    width: 400px;
    
    background: #FFFFFF;
    border: 5px solid #2A363B;
    box-sizing: border-box;
  }

  .add-product {
    position: absolute;
    width: 173.08px;
    height: 45.41px;
    left: 173.54px;
    top: 433px;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 17px;
    line-height: 22px;
    text-align: center;
    letter-spacing: 0.06em;
    
    color: #2A363B;
    background: #99B898;
    
    border: 5px solid #2A363B;
    box-sizing: border-box;
  }

  .add-product:hover {
    background-color: #2A363B;
    color: #99B898;
    transition-duration: 400ms;
  }

  .add-another {
    position: absolute;
    width: 283.02px;
    height: 25.65px;
    left: 370.18px;
    top: 443px;

    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 22px;
    letter-spacing: 0.06em;

    color: #E84A5F;
  }

  .add-another:hover {
    color: #cc3333;
  }

  .text2 {
    position: absolute;
    left: 10.6%;
    right: 61.98%;
    top: 66.5%;
    bottom: 22.42%;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 44px;
    /* identical to box height */
    
    letter-spacing: 0.06em;
    
    color: #2A363B;
  }

  .text3 {
    position: absolute;
    left: 52.23%;
    right: 2.98%;
    top: 66.5%;
    bottom: 22.42%;
    
    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 44px;
    /* identical to box height */
    
    letter-spacing: 0.06em;
    
    color: #2A363B;
  }

  .location-input {
    position: absolute;
    left: 10.6%;
    right: 50.98%;
    top: 73.5%;
    bottom: 22.42%;
    width: 390px;
    
    background: #FFFFFF;
    border: 5px solid #2A363B;
    box-sizing: border-box;
  }

  /* Customize the label (the container) */
  .container {
    display: inline-block;
    position: relative;
    left: 54.23%;
    right: 2.98%;
    top: 568px;
    bottom: 22.42%;
    color: #2A363B;

    padding-left: 37px;
    padding-right: 60px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }

  /* Hide the browser's default checkbox */
  .container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;

    padding-right: 35px;
  }

  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    
    background-color: #eee;
  }

  /* On mouse-over, add a grey background color */
  .container:hover input ~ .checkmark {
    background-color: #2A363B;
  }

  /* When the checkbox is checked, add a blue background */
  .container input:checked ~ .checkmark {
    background-color: #2A363B;
  }

  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }

  /* Show the checkmark when checked */
  .container input:checked ~ .checkmark:after {
    display: block;
  }

  /* Style the checkmark/indicator */
  .container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }

  .profile {
    position: absolute;
    width: 331px;
    height: 112px;
    left: 555px;
    top: 620px;
    
    border: 5px solid #2A363B;
    box-sizing: border-box;
    background: #99B898;

    font-family: Montserrat;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 44px;
    text-align: center;
    letter-spacing: 0.06em;

    color: #2A363B;
  }
  
  .profile:hover {
    background-color: #2A363B;
    color: #99B898;
    transition-duration: 400ms;
  }

  .logo {
    position: absolute;
    width: 44px;
    height: 90px;
    left: 21px;
    top: 23px;
  }

